# yolo-detect

./: .flake8  .gitignore  CAMERA_PERMISSION_FIX.md  CROSS_PLATFORM_COMPATIBILITY.md  FFMPEG_STREAMING.md  GSTREAMER_FIX.md  PROJECT_SUMMARY.md  QUICK_START_STREAMING.md  README.md  STREAMING_COMPARISON.md  TRAINING_GUIDE.md  WEBCAM_DETECTION_GUIDE.md  pyproject.toml
configs/: dataset.yaml
runs/train/person_detection/: args.yaml  results.csv
scripts/: advanced_examples.py  batch_detect.py  deploy_ffmpeg.sh  detect_image.py  detect_video.py  download_models.py  headless_streaming.py  package_model.py  prepare_dataset.py  quickstart.py  receive_stream.py  start_training.py  test_push_streamer.py  train_model.py  webcam_detect.py
service/: __init__.py  push_streamer.py  push_streamer_ffmpeg.py  yolo-streaming.service
test/: quick_ffmpeg_test.py  test_camera.py  test_ffmpeg_diag.py  test_ffmpeg_simple.py  test_gstreamer_debug.py  test_mps_training.py  test_nohead_push_streamer.py  test_push.py  test_push_1080p.py  test_push_ffmpeg.py  test_push_streamer.py
utils/: logger.py
