[project]
name = "yolo-detect"
version = "0.1.0"
description = ""
authors = [
    {name = "lukeding",email = "dingkai9627@outlook.com"}
]
readme = "README.md"
requires-python = ">=3.12,<3.14"
dependencies = [
    "ultralytics (>=8.3.214,<9.0.0)",
    "torch (>=2.8.0,<3.0.0)",
    "torchvision (>=0.23.0,<0.24.0)",
    "opencv-python (>=4.12.0.88,<5.0.0.0)",
    "tqdm (>=4.67.1,<5.0.0)",
    "matplotlib (>=3.10.7,<4.0.0)",
    "numpy (>=2,<2.3.0)",
    "pillow (>=11.3.0,<12.0.0)",
    "polars (>=1.34.0,<2.0.0)",
    "pyyaml (>=6.0.3,<7.0.0)",
    "psutil (>=7.1.0,<8.0.0)",
    "requests (>=2.32.5,<3.0.0)",
    "scipy (>=1.16.2,<2.0.0)",
    "ultralytics-thop (>=2.0.17,<3.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
package-mode = false
[tool.poetry.group.dev.dependencies]
black = "^25.9.0"
isort = "^7.0.0"
flake8 = "^7.3.0"

